<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id = "@+id/crop_image_layout" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_above="@id/decrease_crop_size_button"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:id="@+id/increase_crop_size_button"
        android:text="@string/increase_crop_size_button_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:id="@+id/decrease_crop_size_button"
        android:text="@string/decrease_crop_size_button_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:id="@+id/face_crop_button"
        android:text="@string/face_crop_button_text" />

</RelativeLayout>